--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,6 +59,7 @@ jobs:
       - name: build
         run: |
           npm ci
+          npm test -- --ci --watchAll=false
           npm run build
       - name: Log in to the Container registry
         uses: docker/login-action@v3
